--- a/pom.xml
+++ b/pom.xml
@@ -31,12 +31,14 @@
         <version>2.4.0</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/junit/junit -->
+    <!-- https://mvnrepository.com/artifact/junit/junit -->
     <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-engine</artifactId>
-        <version>5.1.0</version>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.13</version>
         <scope>test</scope>
     </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
     <dependency>
         <groupId>org.mockito</groupId>
